fix goa resources and add Makefile
